@@ -1,3 +1,6 @@
+20/10/15 Julien Dutheil
+* Added Tajima's pi to diversity statistics.
+
 13/01/15 Julien Dutheil
 * More options for OutputAlignments (output file names).
 
